# core

./: .gitattributes  .gitignore  .gitmodules  ALERTS_README.md  FEATURE_IDEAS.md  README.md  localhost+2-key.pem  localhost+2.pem  package-lock.json  package.json  postcss.config.js  readme.md  rspack-progress-plugin.js  rspack.config.js  tailwind.config.js  test-alerts.js  test-new-alerts.js  webarcade.config.json  webarcade.config.schema.json
app/: Cargo.toml
app/plugins/: cheeky.js  clock.js  demo.js  emils.js  layout-tools.js  themes.js
app/scripts/: build.js  build_plugin.js  dev.js  prepare-build.js
app/src/: ipc.rs  ipc_bridge.js  main.rs  plugin_installer.rs  webarcade-api.js
app/src/bridge/: mod.rs  protocols.rs
app/src/bridge/core/: dynamic_plugin_loader.rs  embedded_plugins.rs  events.rs  plugin.rs  plugin_context.rs  plugin_exports.rs  plugin_manager.rs  plugin_router.rs  router_utils.rs  services.rs
app/src/bridge/modules/: mod.rs  system_api.rs
bridge/: Cargo.toml  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  MIGRATION_STATUS.md  PLUGIN_SYSTEM.md  VOICE_SETUP.md  create_plugin_stub.sh  plugins.json
bridge/src/: lib.rs  main.rs  main_plugin_example.rs
bridge/src/commands/: confession_command.rs  currency_commands.rs  database.rs  dice.rs  household.rs  levels.rs  mod.rs  pack_commands.rs  rewards.rs  roulette_commands.rs  todos.rs  tts_command.rs  voice_commands.rs  wheel_command.rs
bridge/src/core/: database.rs  http_router.rs  mod.rs  plugin.rs  plugin_context.rs  plugin_manager.rs  types.rs  websocket_bridge.rs
bridge/src/modules/: alexa.rs  errors.rs  file_sync.rs  file_watcher.rs  goal_sync.rs  handlers.rs  memory_cache.rs  mod.rs  system_monitor.rs  types.rs  websocket_server.rs
bridge/src/modules/discord/: builtin_commands.rs  discord_bot.rs  discord_commands.rs  discord_manager.rs  mod.rs  music_player.rs
bridge/src/modules/twitch/: eventsub.rs  mod.rs  stream_tracker.rs  twitch_api.rs  twitch_auth.rs  twitch_commands.rs  twitch_config.rs  twitch_irc_client.rs  twitch_manager.rs
bridge/src/plugins/: mod.rs
bridge/src/plugins/auction/: database.rs  events.rs  mod.rs
bridge/src/plugins/confessions/: database.rs  events.rs  mod.rs
bridge/src/plugins/currency/: database.rs  events.rs  mod.rs
bridge/src/plugins/files/: mod.rs
bridge/src/plugins/goals/: database.rs  events.rs  mod.rs
bridge/src/plugins/household/: database.rs  events.rs  mod.rs
bridge/src/plugins/hue/: database.rs  events.rs  mod.rs
bridge/src/plugins/levels/: database.rs  events.rs  mod.rs
bridge/src/plugins/notes/: mod.rs
bridge/src/plugins/packs/: database.rs  events.rs  mod.rs
bridge/src/plugins/roulette/: database.rs  events.rs  game.rs  mod.rs
bridge/src/plugins/system/: mod.rs
bridge/src/plugins/text_commands/: mod.rs
bridge/src/plugins/ticker/: database.rs  events.rs  mod.rs
bridge/src/plugins/todos/: database.rs  events.rs  mod.rs
bridge/src/plugins/tts/: database.rs  events.rs  mod.rs
bridge/src/plugins/twitch/: api.rs  auth.rs  commands.rs  database.rs  events.rs  eventsub.rs  irc.rs  mod.rs
bridge/src/plugins/user_profiles/: database.rs  events.rs  mod.rs
bridge/src/plugins/wheel/: mod.rs
bridge/src/plugins/withings/: database.rs  events.rs  mod.rs
cli/: Cargo.toml
cli/src/: main.rs
data/: counters.db
layouts/: Main.json  study.json
plugins/calendar/: index.jsx  panel.jsx  viewport.jsx
plugins/cheeky/: index.jsx
plugins/clock/: index.jsx
plugins/crypto/: index.jsx  panel.jsx  viewport.jsx
plugins/dashboard/: WidgetGrid.jsx  api.js  index.jsx  viewport.jsx
plugins/database/: index.jsx  mod.rs  panel.jsx  store.jsx  viewport.jsx
plugins/demo/: Cargo.toml  DemoBottomPanel.jsx  DemoViewport.jsx  index.jsx  router.rs
plugins/demo/panels/: Console.jsx  Explorer.jsx  Properties.jsx  Viewport.jsx
plugins/emils/: index.jsx  viewport.jsx
plugins/engine/: LeftPanel.jsx  RightPanel.jsx  index.jsx  package.json  viewport.jsx
plugins/layout-tools/: index.jsx
plugins/map/: MapViewport.jsx  index.jsx
plugins/menu/: index.jsx
plugins/opendaw/: index.jsx  package.json
plugins/paint/: PaintViewport.jsx  index.jsx  package.json
plugins/plugin_ide/: builder.rs  router.rs  (+1 more)
public/: twitch-callback.html
scripts/: build.js  build_plugin.js  bundle-plugin-frontend.js  cleanup_package_json.js  convert_to_package_json.js  create_plugin.js  discover-plugins.js  prepare-build.js  start-with-bridge.js  wait-for-bridge.js
src/: App.jsx  base.css  entry-client.jsx  index.html  version.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.export.conf.json
src-tauri/api/: Cargo.toml  DESIGN.md  README.md
src-tauri/api/src/: archive.rs  cache.rs  collections.rs  context.rs  core.rs  crypto.rs  csv.rs  database.rs  encoding.rs  env.rs  error.rs  fetch.rs  ffi_http.rs  form.rs  fs.rs  http.rs  ini.rs  json.rs  lib.rs  macros.rs  mime.rs  path.rs  plugin.rs  prelude.rs  process.rs  query.rs  regex_utils.rs  schedule.rs  state.rs  sys.rs  template.rs  test_suite.rs  text.rs  time.rs  validate.rs  vtable.rs  websocket.rs
src-tauri/bridge/: Cargo.toml  lib.rs
src-tauri/bridge/core/: dynamic_plugin_loader.rs  events.rs  mod.rs  plugin_exports.rs  plugin_macros.rs  plugin_manager.rs
src-tauri/bridge/modules/: developer_api.rs  mod.rs  system_api.rs
src-tauri/builder/: Cargo.toml
src-tauri/builder/scripts/: build_plugin.js  package.json
src-tauri/builder/src/: lib.rs  plugin_builder.rs
src-tauri/icons/: icon.icns
src-tauri/plugins/demo/: package.json  plugin.js
src-tauri/plugins/engine/: package.json
src-tauri/plugins/systemMonitor/: package.json  plugin.js
src-tauri/scripts/: build_plugin.js
src-tauri/src/: main.rs  renderer.rs  screen_capture.rs
src-tauri/src/bridge/: mod.rs
src-tauri/src/bridge/core/: database.rs  dynamic_plugin_loader.rs  mod.rs  plugin_context.rs  plugin_exports.rs  plugin_manager.rs  plugin_vtable.rs  websocket_bridge.rs
src-tauri/src/bridge/modules/: developer_api.rs  mod.rs  plugin_builder.rs  system_api.rs
src-tauri/src/bridge/plugins/: generated.rs  mod.rs
(+263 files in other folders)
