[package]
name = "test6"
version = "0.1.0"
edition = "2021"
description = "game"

[features]
default = []
locked-plugins = []

[dependencies]
wry = "0.47"
tao = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "sync", "time", "macros", "io-util", "process"] }
tokio-stream = { version = "0.1", features = ["time"] }
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1.0"
futures-util = "0.3"
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
url = "2.5"
urlencoding = "2.1"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
async-trait = "0.1"
lazy_static = "1.4"
once_cell = "1.19"
regex = "1.0"
toml = "0.8"
chrono = "0.4"
dirs = "5.0"
zip = "0.6"
libloading = "0.8"
include_dir = "0.7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi"
]}

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols

[package.metadata.packager]
product-name = "test6"
identifier = "com.emils.app"
icons = ["icon.ico", "icon.png"]
authors = ["Unknown"]

[[package.metadata.packager.binaries]]
path = "test6"
main = true

[package.metadata.packager.nsis]
display-language-selector = false
appdata-paths = ['$LOCALAPPDATA\test6']
