[package]
name = "webarcade-cli"
version = "1.0.0"
edition = "2021"
description = "CLI tool for building WebArcade plugins"

[[bin]]
name = "webarcade"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
regex = "1.10"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
