[package]
name = "rocket"
version = "1.0.0"
description = "🚀 Rocket - High-speed development framework for web and desktop applications"
authors = ["Rocket Framework Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
image = "0.24"
rusttype = "0.9"
rayon = "1.8"
screenshots = "0.8"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
