[package]
name = "Webarcade"
version = "1.0.0"
description = "🚀 Webarcade - High-speed development framework for web and desktop plugins/widgets"
authors = ["Webarcade Framework Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri dependencies
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
base64 = "0.22"

# Bridge dependencies - Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "sync", "time", "macros", "io-util", "process"] }
tokio-stream = { version = "0.1", features = ["time"] }

# Bridge dependencies - HTTP/WebSocket
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1.0"
futures-util = "0.3"
tokio-tungstenite = "0.24"

# Bridge dependencies - Utilities
lazy_static = "1.4"
once_cell = "1.19"
log = "0.4"
env_logger = "0.10"
urlencoding = "2.1"
regex = "1.0"
toml = "0.8"
chrono = "0.4"

# Bridge dependencies - Error handling
anyhow = "1.0"
async-trait = "0.1"

# Bridge dependencies - HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Bridge dependencies - System utilities
dirs = "5.0"

# WebArcade plugin API
api = { path = "./api" }

# Bridge dependencies - File extraction
zip = "0.6"

# Bridge dependencies - Dynamic plugin loading
libloading = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Release profile - debug-assertions required for hyper/tokio async compatibility
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug-assertions = true
strip = true
