[package]
name = "demo"
version = "1.0.0"
edition = "2021"

[dependencies]
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
sysinfo = "0.30"
nvml-wrapper = "0.10"
raw-cpuid = "11"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Devices_Usb",
    "Win32_System_Registry",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties",
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
brightness = "0.5"
futures = "0.3"
wmi = "0.13"
cpal = "0.15"
rustfft = "6.2"
once_cell = "1.19"
parking_lot = "0.12"

# New features
nokhwa = { version = "0.10", features = ["input-native"] }  # Webcam capture
qrcode = "0.14"                                              # QR code generation
image = "0.25"                                               # Image processing
base64 = "0.22"                                              # Base64 encoding for images
tts = "0.26"                                                 # Text-to-speech
gilrs = "0.10"                                               # Gamepad input
screenshots = "0.8"                                          # Screen capture
arboard = "3"                                                # Clipboard access

# Synthesizer & Network
rodio = "0.19"                                               # Audio playback
reqwest = { version = "0.12", features = ["blocking"] }      # HTTP for speed test
rand = "0.8"                                                 # Random number generation

[routes]
"GET /hello" = "handle_hello"
"POST /notify" = "handle_notify"
"GET /cpu" = "handle_cpu_info"
"GET /gpu" = "handle_gpu_info"
"GET /ram" = "handle_ram_info"
"GET /usb" = "handle_usb_devices"
"GET /audio/level" = "handle_audio_level"
"GET /brightness" = "handle_get_brightness"
"POST /brightness" = "handle_set_brightness"
"GET /audio/devices" = "handle_audio_devices"
"GET /audio/spectrum" = "handle_audio_spectrum"
"POST /audio/spectrum/start" = "handle_start_audio_capture"
"POST /audio/spectrum/stop" = "handle_stop_audio_capture"
"POST /shell/exec" = "handle_shell_exec"

# New features
"GET /webcam/devices" = "handle_webcam_devices"
"POST /webcam/start" = "handle_webcam_start"
"POST /webcam/stop" = "handle_webcam_stop"
"GET /webcam/frame" = "handle_webcam_frame"
"POST /qrcode" = "handle_qrcode_generate"
"POST /tts/speak" = "handle_tts_speak"
"POST /tts/stop" = "handle_tts_stop"
"GET /gamepad" = "handle_gamepad_state"
"POST /screenshot" = "handle_screenshot"
"GET /screenshot/displays" = "handle_screenshot_displays"
"GET /color-picker" = "handle_color_picker"

# Synthesizer
"POST /synth/play" = "handle_synth_play"
"POST /synth/stop" = "handle_synth_stop"

# Network
"POST /speedtest/download" = "handle_speedtest_download"
"POST /speedtest/upload" = "handle_speedtest_upload"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
