[package]
name = "api"
version = "1.0.0"
edition = "2021"
description = "WebArcade Plugin API - Create plugins for WebArcade"
license = "MIT"

[dependencies]
# Core async runtime
async-trait = "0.1"
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP types (just types, no implementations)
hyper = { version = "1.5", default-features = false }
hyper-util = { version = "0.1.10", default-features = false }
http-body-util = "0.1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
log = "0.4"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Commonly used utilities
regex = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"
rand = "0.8"

[features]
default = []
# For when building plugins
plugin = []
