[package]
name = "api"
version = "1.0.0"
edition = "2021"
description = "WebArcade Plugin API - Lightweight plugin development kit"
license = "MIT"

[dependencies]
# Serialization (required for FFI)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 for binary data encoding
base64 = "0.22"

# Tokio with multi-thread runtime (must match host app)
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread"] }

# HTTP types only - no server/client implementation
http = "1.0"
bytes = "1.0"

# Logging
log = "0.4"
