[package]
name = "bridge"
version = "1.0.0"
edition = "2021"
description = "WebArcade bridge server - HTTP/WebSocket plugin runtime"

[lib]
path = "lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "sync", "time", "macros", "io-util", "process"] }
tokio-stream = { version = "0.1", features = ["time"] }

# HTTP/WebSocket
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1.0"
futures-util = "0.3"
tokio-tungstenite = "0.24"

# Utilities
lazy_static = "1.4"
once_cell = "1.19"
log = "0.4"
env_logger = "0.10"
urlencoding = "2.1"
regex = "1.0"
chrono = "0.4"
toml = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
async-trait = "0.1"

# System utilities
dirs = "5.0"
base64 = "0.22"

# Dynamic plugin loading
libloading = "0.8"

# WebArcade crates
api = { path = "../api" }
builder = { path = "../builder", optional = true }

[features]
default = []
dev-tools = ["builder"]  # Include builder and developer API for dev builds
