[package]
name = "builder"
version = "1.0.0"
edition = "2021"
description = "WebArcade plugin builder - compiles and bundles plugins"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
dirs = "5.0"
zip = "2.1"
log = "0.4"
